feat: implement inheritance API with models and controller for project and team member
